newclay/test/Compiler/StaticEvaluator/Fail/TestingStaticError1/main.clay
import __primitives__.*;

#Main() = staticError("to sleep, perchance to dream");
